Fix layout bug and allow for close on click on all ModalCentreFlex content divs

--- a/src/css/help.css
+++ b/src/css/help.css
@@ -23,5 +23,11 @@ table {
 #helpOverlay {
     z-index: 4;
     background: rgba(54, 25, 25, .5);
-    display: none
+    display: none;
+    cursor: pointer;
+    pointer-events: auto;
+    width: 100%;
+    height: 110%;
+    align-items: center;
+    justify-content: center;
 }
